--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "axios": "^1.7.2",
     "formik": "^2.4.5",
     "free": "^1.0.0",
+    "i18next": "^23.11.5",
     "ink": "^4.4.1",
     "inter": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.2",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
