--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.2",
     "formik": "^2.4.5",
     "free": "^1.0.0",
+    "gapi-script": "^1.2.0",
     "i18next": "^23.11.5",
     "ink": "^4.4.1",
     "inter": "^2.1.0",
