--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "formik": "^2.4.5",
+    "framer-motion": "^11.2.10",
     "free": "^1.0.0",
     "gapi-script": "^1.2.0",
     "ink": "^4.4.1",
