--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
+    "@mui/x-charts": "^7.6.2",
     "@mui/x-data-grid": "^7.1.1",
     "@nivo/bar": "^0.85.1",
     "@nivo/core": "^0.85.1",
